--- a/person-contact-ui/package.json
+++ b/person-contact-ui/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.1.96",
+    "pinia": "^2.0.33",
     "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.6"
   },
   "devDependencies": {
